fix: resolving dns names

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,8 +1,10 @@
 lua_package_path "/usr/local/openresty/lualib/?.lua;;";
 
 server {
-    listen 80;
+    listen 8080;
     server_name _;
+    resolver 10.96.0.10 1.1.1.1 8.8.8.8 valid=300s ipv6=off;
+    resolver_timeout 5s;
 
     # Serve the built Navia bundle under /navia/.
     location /navia/ {
@@ -23,6 +25,9 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Accept-Encoding "";
         proxy_ssl_server_name on;
+        proxy_ssl_name eventflow.opensourcesantiago.io;
+        proxy_connect_timeout 10s;
+        proxy_read_timeout 30s;
 
         header_filter_by_lua_block {
             local content_type = ngx.header["Content-Type"]
